RM-1415 fixed line breaks and vertical align in radio button mode
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@13868 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/HTML/BocEnumValue.css
+++ b/Remotion/ObjectBinding/Web/Res/HTML/BocEnumValue.css
@@ -1,6 +1,3 @@
-/*  This style file is only used for documenting the classes. 
-    It is not automatically included by the BocEnumValue. */
-
 .bocEnumValue
 {
 }
@@ -11,4 +8,14 @@
 
 .bocEnumValue.disabled
 {
+}
+
+.bocEnumValue td
+{
+  white-space: nowrap;
+}
+
+.bocEnumValue td label
+{
+  vertical-align: top;
 }
